clang/test/BSC/Negative/Trait/GenericTrait/typedef_trait/typedef_trait.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

typedef trait F<T> {
  T foo(This* this, int a);
}G; // expected-error {{expected ';' after trait}}
                // expected-warning@-1 {{type specifier missing, defaults to 'int'; ISO C99 and later do not support implicit int}}